# AI_Contract_Reviewer

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deploy_secure.sh  docker-compose.override.yml  docker-compose.yml  generate_synthetic_images.py  main.py  ngrok.example.yml  pyproject.toml  run_extractor.py  streamlit_app.py  test_image_path.py  test_otel.py  test_root.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
ai_service/agents/: __init__.py  clause_extractor.py  obligation_finder.py  plain_english_writer.py  red_flag_detector.py  report_assembler.py  risk_scorer.py
ai_service/memories/: chat_history.py  memory_service.py  memory_store.py  multimodal_indexer.py
ai_service/prompts/: chat_prompts.py  clause_extractor_prompt.py  obligation_finder_prompt.py  plain_english_writer_prompt.py  red_flag_detector_prompt.py  report_assembler_prompt.py  risk_scorer_prompt.py  system_context.py
ai_service/services/: async_azure_client.py  azure_clients.py  batch_processor.py  chat_retrieval.py  chat_runner.py  chat_service.py  chat_tools.py  content_filter.py  contract_review_service.py  langfuse_tracer.py  llm_client.py  retrieval_service.py  search_client.py  semantic_cache.py  services.py  tool_executor.py  tool_implementations.py
ai_service/utils/: agent_output_persistence.py  chat_relevancy.py  chunking.py  clause_builders.py  clause_extractor_helpers.py  compression_helper.py  contract_analysis.py  coverage_validator.py  extraction_tracer.py  llm_parsing.py  masker.py  obligation_heuristics.py  page_renderer.py  pdf_cleaner.py  prompt_cache.py  telemetry.py  tracing.py  unmasker.py
app/: config.py  main.py
app/controllers/: __init__.py  controller.py
app/middlewares/: __init__.py  rate_limiter.py
app/reports/: report_docx.py  report_exporter.py  report_markdown.py  report_pdf.py
app/routers/: __init__.py  chat_router.py  debug_router.py  health_router.py  review_router.py  session_router.py  trace_router.py
app/schemas/: chat.py  debug.py  review.py
app/services/: app_helpers.py  db_store.py  keyvault.py  redis_client.py
app/utils/: async_utils.py  auth.py  text_utils.py
checkpointing/: __init__.py  mongo_checkpointer.py  redis_checkpointer.py
docker/: Dockerfile
scratch/: check_chat_logs.py  check_event_payload.py  check_trace_detail.py  contract_46ce978f8a9180f4.txt  extract_checkpoint_contract.py  inspect_candidates.py  raw_clause_extractor_response.txt  test_clause_extractor_run.py  test_prompt_caching_split.py
scripts/: analyze_trace.py  backfill_costs.py  check_api_keys.py  custom_lint.py  diagnose_recall.py  index_offline_docs.py
src/: __init__.py  config.py  fastapi_app.py
src/agents/: __init__.py  clause_extractor.py  obligation_finder.py  pipeline_tools.py  plain_english_writer.py  red_flag_detector.py  report_assembler.py  risk_scorer.py  unified_analyzer.py  utils.py
src/checkpointing/: __init__.py  mongo_checkpointer.py  redis_checkpointer.py
src/controllers/: controller.py
src/executors/: __init__.py  executor.py
tests/: __init__.py  conftest.py  run_deepeval_ci.py  test_agent_output_persistence.py  test_async_workflow.py  test_celery_tasks.py  test_chat_endpoints.py  test_chat_jailbreak.py  test_chat_queue.py  test_chat_tools.py  test_chat_ui_gating.py  test_completeness.py  test_confidence_score_coercion.py  test_config.py  test_content_filtering.py  test_coverage_validator.py  test_db_chat_history.py  test_deepeval_contract.py  test_dynamic_chunking.py  test_file_size_limit.py  test_gating.py  test_groq_integration.py  test_hybrid_search.py  test_large_contract_truncation.py  test_masking.py  test_memory.py  test_model_routing.py  test_mongo_checkpointer.py  test_obligation_finder.py  test_party_centric_parsing.py  test_path_traversal.py  test_pdf_cleaner.py  test_perspective.py  test_pipeline_tools.py  test_prompt_caching.py  test_prompt_injection_containment.py  test_qdrant.py  test_rate_limiter.py  test_report_exporter.py  test_retrieval_quality.py  (+9 more)
worker/: autoscaler.py  celery_app.py  tasks.py
workflows/: async_workflow.py  workflow.py
(+69 files in other folders)
