[project]
name = "ai-contract-reviewer"
version = "0.1.0"
description = "AI Contract Reviewer - Multi-agent system for contract analysis"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain_openai>=0.1",
    "langchain-community>=0.3",
    "langfuse>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.28",
    "streamlit>=1.32",
    "pydantic>=2.0,<3.0",
    "pymupdf>=1.24.0",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "azure-ai-documentintelligence>=1.0.0b1",
    "azure-storage-blob>=12.19",
    "azure-search-documents>=11.4",
    "azure-identity>=1.15",
    "reportlab>=4.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "groq>=0.9.0",
    # Direct SDK deps previously unlisted:
    "openai>=1.30",
    "httpx>=0.27",
    "tenacity>=8.2",
    "qdrant-client>=1.9",
    "az>=0.1.0.dev1",
    "login>=0.0.6",
    "jaraco-context>=6.1.0",
    "wheel>=0.46.2",
    "azure-keyvault-secrets>=4.11.0",
    "pymongo>=4.0",
    "dnspython>=2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "mypy",
    "deepeval",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
