[project]
name = "ai-contract-reviewer"
version = "0.1.0"
description = "AI Contract Reviewer - Multi-agent system for contract analysis"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain~=1.3.2", # pinned for reproducibility — update intentionally
    "langgraph~=1.2.2", # pinned for reproducibility — update intentionally
    "langchain-community>=0.3",
    "langfuse>=2.0",
    "fastapi~=0.136.3", # pinned for reproducibility — update intentionally
    "uvicorn>=0.28",
    "streamlit~=1.58.0", # pinned for reproducibility — update intentionally
    "pydantic>=2.0,<3.0",
    "pymupdf>=1.24.0",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "azure-ai-documentintelligence>=1.0.0b1",
    "azure-storage-blob>=12.19",
    "azure-search-documents>=11.4",
    "azure-identity>=1.15",
    "reportlab>=4.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.32",
    "groq>=0.9.0",
    "openai>=1.30",
    "qdrant-client>=1.9",
    "jaraco-context>=6.1.0",
    "wheel>=0.46.2",
    "azure-keyvault-secrets>=4.11.0",
    "pymongo>=4.0",
    "dnspython>=2.0",
    "starlette>=1.3.1",
    "slowapi>=0.1.9",
    "limits>=3.6",
    "celery>=5.3",
    "headroom>=0.2.7",
    "cryptography>=42.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "deepeval",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
